[package]
name = "ServShell-Server"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["ws"]}
tokio = { version = "1.45", features = ["full", "rt"] }     #rt?!
tokio-util = "0.7"                                          #?!
dashmap = "7.0.0-rc2"
once_cell = "1.21"
uuid = { version = "1.17", features = ["v4"] }
futures = "0.3"